Fix avatar overlap

--- a/src/styles/components/_avatar.scss
+++ b/src/styles/components/_avatar.scss
@@ -21,6 +21,7 @@
     width: 100%;
     height: 100%;
     content: '';
+    pointer-events: none;
     border-radius: inherit;
   }
 }
